<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pollux</string>
    <string name="ready_offline">Çevrimdışı hazır</string>
    <string name="need_anything">Ne lazım?</string>
    <string name="empty_chat">Henüz bir şey sormadın.</string>
    <string name="input_hint">Bir şey yaz…</string>
    <string name="send_desc">Gönder</string>
    <string name="mic_desc">Sesle yaz</string>
    <string name="menu_desc">Menü</string>
    <string name="menu_new_chat">Yeni sohbet</string>
    <string name="menu_links">Kısayollarım</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="menu_panel">Moderatör paneli</string>
    <string name="menu_logout">Çıkış yap</string>
    <string name="links_title">Kısayollarım</string>
    <string name="links_add">Ekle</string>
    <string name="links_empty">Henüz kısayol yok. Sağ üstten ekle.</string>
    <string name="links_name_hint">Ad (örn: Linklerim)</string>
    <string name="links_url_hint">Adres (örn: https://…)</string>
    <string name="links_saved">Kaydedildi</string>
    <string name="links_deleted">Silindi</string>
    <string name="links_bad_url">Geçerli bir adres yaz (http…).</string>
    <string name="cancel">Vazgeç</string>
    <string name="delete">Sil</string>
    <string name="settings_title">Ayarlar</string>
    <string name="settings_look">Görünüm</string>
    <string name="settings_theme">Tema</string>
    <string name="settings_theme_system">Sistem</string>
    <string name="settings_font">Yazı boyutu</string>
    <string name="settings_font_small">Küçük</string>
    <string name="settings_font_normal">Normal</string>
    <string name="settings_font_big">Büyük</string>
    <string name="settings_data">Çevrimdışı veri</string>
    <string name="settings_data_builtin">Yerleşik bilgi bankası</string>
    <string name="settings_data_full">Tam veri seti (10M kayıt)</string>
    <string name="settings_download">İndir</string>
    <string name="settings_downloading">İndiriliyor…</string>
    <string name="settings_voice">Ses modeli</string>
    <string name="settings_about">Hakkında</string>
    <string name="settings_about_text">Pollux • çevrimdışı öncelikli Türkçe asistan</string>
    <string name="offline_lookup">İnternet yok; çevrimdışı bildiklerimle bakıyorum.</string>
    <string name="copied">Kopyalandı</string>
    <string name="listening">Dinleniyor… konuş</string>
    <string name="no_model">Ses modeli yok. Ayarlar’dan indirebilirsin.</string>
</resources>
